--- a/src/components/Css/SearchBar.css
+++ b/src/components/Css/SearchBar.css
@@ -1,13 +1,14 @@
 .SearchBar {
-  width: 100px;
+  display: flex;
   height: 60px;
-  display: block;
+  align-items: center;
 }
 
 .InputA {
-  border-radius: 15px;
+  border-radius: 15px 0px 0px 15px
 }
 
 .ButtonA {
-  border-radius: 15px;
+  display: flex;
+  border-radius: 0px 15px 15px 0px;
 }
