--- a/src/components/Css/Card.css
+++ b/src/components/Css/Card.css
@@ -1,9 +1,11 @@
 .Card{
-    border: 8px solid blue;
+    border: 4px solid rgb(136, 101, 55);
+    background-image: url("https://th.bing.com/th/id/R.ea2498f65de9e57dcf10a39e07d1ebfb?rik=pWcEbuohcpRw6w&pid=ImgRaw&r=0");
     width: 22%;
-    color: aquamarine;
+    color: rgb(136, 101, 55);
 }
 
 img{
-    width: 100%;
+    border: 2px solid rgb(136, 101, 55);
+    width: 90%;
 }
