--- a/src/components/Css/Cards.css
+++ b/src/components/Css/Cards.css
@@ -3,7 +3,7 @@
     padding: 25px;
     justify-content: space-evenly;
     border: 2px dotted black;
-    height: 100%;
+    height: 100vh;
     align-items: stretch;
 }
 
